# CMeshStudio

./: .gitignore  CME文件扩展规范.md  CMakeLists.txt  CMeshStudio.txt  CMeshStudio_与传统建模对比分析报告.md  README.md  build.ps1  compile.bat  test_geometry.cpp  test_geometry_direct.cpp  test_geometry_final.cpp  test_geometry_simple.cpp  脚本编写指南.md
.cache/clangd/index/: error_handler.cpp.ACFD5B603F65FD7E.idx  geometry.cpp.AE225BEBE1FBC13A.idx  geometry_factory.cpp.150E133C22A764A4.idx  glviewport.cpp.00B3AAA3776E6B2B.idx  libtcc.h.B774759BA991D00D.idx  main.cpp.FA00E72812236E0A.idx  mainwindow.cpp.68E4B8325EFCC363.idx  math_types.cpp.F37964CD0AF48046.idx  parser.cpp.EDF22BFD1E766302.idx  tccengine.cpp.F7496749334E390D.idx
.trae/skills/libtcc-integration/: SKILL.md
extlib/nlohmann-json-develop/.github/workflows/: codeql-analysis.yml  flawfinder.yml  scorecards.yml  semgrep.yml
include/: csyntaxhighlighter.h  geometry.h  glviewport.h  mainwindow.h  math_types.h  tccengine.h
src/: csyntaxhighlighter.cpp  geometry.cpp  glviewport.cpp  main.cpp  mainwindow.cpp  math_types.cpp  tccengine.cpp
